--- a/public/partials/_contact.html
+++ b/public/partials/_contact.html
@@ -1,5 +1,36 @@
-<div class="row">
-  <div class="col-12">
-    <h2>Contact</h2>
-  </div>
+<div class="container">
+  <h2>drop us a line.</h2>
+  <form id="my-form">
+    <div class="form-row">
+      <div class="col-6">
+        <div class="form-group">
+          <label for="input-name" class="sr-only">name</label>
+          <input
+            type="text"
+            class="form-control"
+            id="input-name"
+            placeholder="name"
+          />
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="form-group">
+          <label for="input-email" class="sr-only">email</label>
+          <input
+            type="email"
+            class="form-control"
+            id="input-email"
+            placeholder="email"
+          />
+        </div>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="input-comments" class="sr-only">comments</label>
+      <textarea class="form-control" id="input-comments" rows="5" placeholder="say hello.."></textarea>
+    </div>
+    <button type="submit" class="btn btn-secondary btn-block" disabled>
+      send
+    </button>
+  </form>
 </div>
