Add home functionality and layout

--- a/public/partials/_home.html
+++ b/public/partials/_home.html
@@ -1,1 +1,4 @@
-<h1 class="main-title">star wars api</h1>
+<div class="container">
+  <h1 class="main-title">star wars api</h1>
+  <p class="logo">#</p>
+</div>
