--- a/public/partials/_people.html
+++ b/public/partials/_people.html
@@ -1,5 +1,23 @@
-<div class="row">
-  <div class="col-12">
-    <h2>People</h2>
+<div class="container">
+  <div class="characters">
+    <table class="table table-striped table-dark">
+      <thead>
+        <tr>
+          <th scope="col">id</th>
+          <th scope="col">name</th>
+          <th scope="col">gender</th>
+          <th scope="col">height</th>
+          <th scope="col">weight</th>
+          <th scope="col">eyes</th>
+          <th scope="col">save</th>
+        </tr>
+      </thead>
+      <tbody class="table-body"></tbody>
+    </table>
   </div>
+  <div class="row justify-content-md-center btn-container">
+      <div class="col-auto">
+        <button class="btn btn-info" id="btn-more">more</button>
+      </div>
+    </div>
 </div>
