--- a/public/partials/_home.html
+++ b/public/partials/_home.html
@@ -1,4 +1,6 @@
-<div class="container">
-  <h1 class="main-title">star wars api</h1>
-  <p class="logo">#</p>
+<div class="container-fluid main p-0 d-flex justify-content-around align-items-center">
+  <div>
+    <h1 class="main-title">star wars api</h1>
+    <p class="logo">$#</p>
+  </div>
 </div>
